--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div class="title">
         <div id="img_tournament" class="img_tournament">
-            <img src="images/logo_bg.png" alt="">
+            <img src="images/body/logo.png" alt="">
         </div>
     </div>
 
@@ -52,14 +52,21 @@
                 <div id="layer1" class="collapsible-body" style="display: block;">
                     <h2 class="h2__tn01">Llegó el torneo que estabas esperando</h2>
                     <p class="p__tn01">Esta es la competencia que busca enfrentar a los jugadores más destacados por más de 20 MIL SOLES EN PREMIOS.</p>
-                    <p class="p__des01">
-                        <a href="#" onclick="selectLayer(5);return false;">
-                            <img src="images/inscribe.png" width="433" height="68" alt="Register">
-                        </a>
-                    </p>
+
+                    <div class="dv_img">
+                        <p class="p__des01">
+                            <a href="#" onclick="selectLayer(5);return false;">
+                                <img id="img_register" src="images/inscribe.png" alt="Register">
+                            </a>
+                        </p>
+                    </div>
                     <p class="p__tn01">Inscríbete vía online en esta web.</p>
 
-                    <p class="p__des01"><a onclick="selectLayer(3)"><img src="images/nuestrasfechas.png" width="343" height="43" alt="date"></a></p>
+                    <p class="p__des01">
+                        <a onclick="selectLayer(3)">
+                            <img id="img_nuestrasfechas" src="images/nuestrasfechas.png" alt="date">
+                        </a>
+                    </p>
 
                     <p class="p__tn01">Suscríbete para más novedades sobre el torneo y oportunidades de ganar premios para el público.</p>
 
@@ -67,17 +74,17 @@
                         <a href="https://www.facebook.com/SoftnyxLatino.Oficial/" target="_blank">
                             <img src="http://img.softnyx.com/3/sn2016/event/19copa/main_btn_fb.png" width="43" height="42" alt="facebook">
                         </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <a href="https://www.youtube.com/user/MySoftnyx" target="_blank">
+                        <a href="https://www.youtube.com/c/WolfTeamLatinoOficial" target="_blank">
                             <img src="http://img.softnyx.com/3/sn2016/event/19copa/main_btn_ut.png" width="43" height="42" alt="youtube">
                         </a>
                     </p>
                 </div>
             </li>
             <li class="" id="li2">
-                <div id="header2" class="collapsible-header noactive-header"><i class="fa fa-question-circle" aria-hidden="true"></i>¿Que es la copa wolfteam 2022?</div>
+                <div id="header2" class="collapsible-header noactive-header"><i class="fa fa-question-circle" aria-hidden="true"></i>¿Que es la copa wolfteam 2023?</div>
                 <div id="layer2" class="collapsible-body" style="display: none;">
                     <p class="p__tn02">
-                        La Copa WolfTeam 2022, es el torneo Internacional en el que nuestros Softnyx Gamers se reúnen para darnos la competencia más emocionante y exigente del año.
+                        La Copa WolfTeam 2023, es el torneo Internacional en el que nuestros Softnyx Gamers se reúnen para darnos la competencia más emocionante y exigente del año.
                     </p>
 
                     <p class="p__tn02">
@@ -104,7 +111,8 @@
             <li class="" id="li3">
                 <div id="header3" class="collapsible-header noactive-header"><i class="fa fa-calendar" aria-hidden="true"></i>Fechas del torneo</div>
                 <div id="layer3" class="collapsible-body" style="display: none;">
-                    <div id="date1" class="p__des01" style="display: block;"><img src="http://img.softnyx.com/3/sn2016/event/19copa/layer02_img05.png" width="620" usemap="#Map">
+                    <div id="date1" class="p__des01" style="display: block;">
+                        <img id="img_post1" src="images/body/post01.png" usemap="#Map">
                         <map name="Map">
                           <area shape="rect" coords="452,208,590,255" href="!#" target="_blank">
                           <area shape="rect" coords="450,1698,588,1745" href="https://goo.gl/maps/wp9ym6YY3g12" target="_blank">
@@ -240,7 +248,9 @@
                     </p>
 
                     <p class="p__des01">
-                        <a href="http://bit.ly/InscripcionesCopaSoftnyx2019" target="_blank"><img src="http://img.softnyx.com/3/sn2016/event/19copa/layer04_btn01.png"></a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSegu-DpNXbLqZzHEhSbFrn63hU3r4w7w7MaCfwu2YHMoVJdmQ/viewform" target="_blank">
+                            <img id="img_inscribete" src="http://img.softnyx.com/3/sn2016/event/19copa/layer04_btn01.png">
+                        </a>
                     </p>
 
                     <p class="p__tn02">
@@ -272,7 +282,7 @@
                     </p>
 
                     <p class="p__tn02">
-                        4. Si tu equipo reside fuera de Lima y existe un menor de edad entre sus integrantes, este deberá recibir la autorización de sus padres para viajar, en caso clasificar a los cuartos de final en Lima. Puedes solicitar el documento "Autorización de Menores" al correo correo: torneo@softnyx.com
+                        4. Si tu equipo reside fuera de Lima y existe un menor de edad entre sus integrantes, este deberá recibir la autorización de sus padres para viajar, en caso clasificar a los cuartos de final en Lima. Puedes solicitar el documento "Autorización de Menores" al correo: torneo@softnyx.com
                     </p>
 
                     <p class="p__tn02">
@@ -284,7 +294,7 @@
                 <div id="header6" class="collapsible-header noactive-header"><i class="fa fa-trophy" aria-hidden="true"></i>Gran Final</div>
                 <div id="layer6" class="collapsible-body" style="display: none;">
                     <p class="p__des01">
-                        <img src="http://img.softnyx.com/3/sn2016/event/19copa/layer07_img01.png" alt="." width="620" border="0">
+                        <img id="img_post2" src="images/body/post02.png" alt=".">
                     </p>
                 </div>
             </li>
