--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <p class="p__tn01">Suscríbete para más novedades sobre el torneo y oportunidades de ganar premios para el público.</p>
 
                     <p class="p__des01">
-                        <a href="https://www.facebook.com/SoftnyxLatino.Oficial/" target="_blank">
+                        <a href="https://www.facebook.com/WolfteamLatino" target="_blank">
                             <img src="http://img.softnyx.com/3/sn2016/event/19copa/main_btn_fb.png" width="43" height="42" alt="facebook">
                         </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <a href="https://www.youtube.com/c/WolfTeamLatinoOficial" target="_blank">
